--- a/lab03-test/lab03-test.cbp
+++ b/lab03-test/lab03-test.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="cs-lab03" />
+		<Option title="lab03-test" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/cs-lab03" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/lab03-test" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/cs-lab03" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/lab03-test" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -30,19 +30,19 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename=".gitignore" />
-		<Unit filename="histogram.h" />
-		<Unit filename="histrogram.cpp" />
-		<Unit filename="main.cpp" />
+		<Unit filename="../cs-lab03/histogram.h" />
+		<Unit filename="../cs-lab03/histrogram.cpp" />
+		<Unit filename="../cs-lab03/svg.cpp">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
+		<Unit filename="../cs-lab03/svg.h" />
 		<Unit filename="svg.cpp" />
-		<Unit filename="svg.h" />
+		<Unit filename="test.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
 			<debugger />
-			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
